Fixed some unsaved comments on tranparency and the alternative transparency option

--- a/HTML.html
+++ b/HTML.html
@@ -50,9 +50,12 @@
                 border-color:red;
                 background-color:navajowhite;
                 border: solid;
-                /*opacity:0.8;*/
+                /*-opacity:0.8; This will changed the opacity for both background and Text
+                  -background: rgba(red,green,blue,opacity); is a better way to fix this by use making the background tranparent
+                */
                 background:rgba(255,255,255,0.7);
                 margin-right:40px;
+
             }
 
             body{
