--- a/HTML.html
+++ b/HTML.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-        <title>HTML PRACTICE</title>
+        <title>HTML PRACTICE AND Testing</title>
 
         <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 
@@ -18,7 +18,7 @@
                 border:solid;
                 border-radius: 100px;
                 padding: 1px;
-                z-index:20;
+                z-index:21;
 
             }
 
@@ -66,7 +66,6 @@
                 background:rgba(255,255,255,0.7);
                 margin-right:40px;
                 margin-top: 10px;
-
                 padding:200px;
             }
 
@@ -133,7 +132,7 @@
                 <li>Ho</li>
             </ol>
         </div>
-
+        <h>This is cool!</h>
 
     </body>
 </html>
