--- a/HTML.html
+++ b/HTML.html
@@ -6,6 +6,9 @@
 
         <!-- lOCAL Embedding of JQUERY-->
         <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+        <!-- linking jQuery UI -->
+        <link href="jquery-ui.min.css">
+        <scrip type="text/javascript" src="jquery-3.2.1.min.js"></scrip>
 
         <style>
             /*-CSS BOX MODELLING: http://www.yourhtmlsource.com/stylesheets/cssspacing.html
@@ -289,6 +292,8 @@
                     marginRight:"800px",
                 }, 2000);
             });
+
+            /*jQuery UI*/
 
         </script>
 
