add body alinement and stuff

--- a/HTML.html
+++ b/HTML.html
@@ -11,6 +11,17 @@
         <script type="text/javascript" src="jquery-ui.min.js"></script>
 
         <style>
+            body{
+                background-color:aliceblue;
+                border: 3px;
+                border-style:dashed;
+                border-color:cadetblue;
+                max-width: 1000px;
+                margin: 20px auto; /* height width*/
+
+
+            }
+
             /*-CSS BOX MODELLING: http://www.yourhtmlsource.com/stylesheets/cssspacing.html
               -Set "body" and "p" padding and margin to "0" if you want no white-space distance between each element
               -Need to remember: z-axis, postion, opacity, float, margin, border, padding,top, left, right, bottom, width, height
